fixed header on firefox

--- a/css/familyStyles.css
+++ b/css/familyStyles.css
@@ -15,6 +15,7 @@ h1{
 	width:fit-content;
 	top:20px;
 	margin: auto;
+	text-align: center;
 	border-radius:15px;
 	font-family: 'Laila', serif;
 	font-size:60px;
